--- a/style.css
+++ b/style.css
@@ -1,34 +1,26 @@
 body {
     font-family: 'Arial', sans-serif;
     text-align: center;
-    margin: 30px;
+    margin: 20px;
     background-color: #ededed;
 }
 
 /* Container for the layout */
 .container {
     display: flex;
-    flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    padding: 10px;
-    border: 2px solid #ccc; /* Border for visualization */
+    position: relative; /* Enable positioning */
 }
 
 /* Left side of the layout */
-.left {
-    flex: 4;
+.container_flex {
+    flex: 1;
     display: flex;
     flex-direction: column;
     align-items: center;
-}
-
-/* Right side of the layout */
-.right {
-    flex: 10;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    position: relative; /* Enable positioning */
+    z-index: 2; /* Ensure it's on top */
 }
 
 #startButton {
@@ -39,61 +31,71 @@ body {
     text-align: center; /* Center text */
     text-decoration: none; /* Remove underline */
     font-size: 35px; /* Font size */
-    margin-top: 40px; /* Margin on top */
+    margin-top: 20px; /* Margin on top */
     border-radius: 8px; /* Rounded corners */
 }
 
 #textSizeSlider {
     -webkit-appearance: none;
-    width: 25%;
+    width: 50%;
     height: 25px;
-    background: #c2c0c0; /* Gray background */
+    margin: 0;
+    background: #cdc9c9; /* Gray background */
     transition: opacity 0.2s; /* Smooth transition on hover */
     border-radius: 6px; /* Rounded corners */
 }
 
 #exercise-count {
     color: #2b2b2b;
-    font-size: 30px;
-    margin: 25px;
+    font-size: 25px;
+    margin: 10px;
 }
 
 #exercise-name {
     color: #2b2b2b;
     font-size: 40px;
-    margin: 25px;
+    margin: 15px;
 }
 
 #timer {
     color: #2b2b2b;
-    font-size: 70px;
-    margin: 25px;
+    font-size: 80px;
+    margin: -5px;
 }
 
 #set-count {
     color: #2b2b2b;
-    font-size: 30px;
+    font-size: 25px;
     margin: 25px;
 }
 
 #welcomeText {
     color: #2b2b2b;
     font-size: 35px;
-    margin: 20px;
+    margin: 25px;
 }
 
 #progress-bar-container {
-    width: 95%;
-    margin: 10px auto;
+    width:  100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
     background-color: #c2c0c0;
-    border-radius: 10px;
+    opacity: 0.8;
+    border-radius: 20px;
     overflow: hidden;
+    z-index: 1; /* Ensure it's behind other content */
 }
 
 #progress-bar {
-    width: 0px;
-    height: 100px;
+    width:  100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
     background-color: #4caf50;
     transition: width 0.5s;
+    z-index: 1; /* Ensure it's behind other content */
     /* transition-timing-function: linear; */
 }
